# Tauri-Send-Imp-Error

./: README.md  package-lock.json  package.json
src-tauri/: Cargo.toml  sociapensify.db  sociapensify.db-journal
src-tauri/.cargo/: config.toml
src-tauri/prisma/: schema.prisma
src-tauri/prisma/migrations/20230411152239_initial/: migration.sql
src-tauri/src/: main.rs  prisma.rs
src/components/: Greet.vue
